# Librarian

./: .gitignore  README.md  pyproject.toml
data/: README.md  create_collections.ipynb
data/LLM_description_clusters/new/: 0.jsonl  1.jsonl  2.jsonl  3.jsonl  4.jsonl  5.jsonl  6.jsonl  7.jsonl  8.jsonl
data/LLM_description_clusters/old/: 0.jsonl  1.jsonl  3.jsonl  4.jsonl  5.jsonl  6.jsonl  8.jsonl  9.jsonl
program_refactoring/: headers.py  log_probs.py  logger.py  refactor_db.py  utils.py
program_refactoring/agent/: agent.py  agent_main.py
program_refactoring/codebank/: __init__.py  codebank.py  function.py  test_case.py
program_refactoring/domains/codecontests_cpp/: generate_collection.py
program_refactoring/domains/codecontests_python/: generate_collection.py
program_refactoring/domains/logos/: convert_programs.py  generate_collection.py  generate_programs.py  pyturtle.py  utils.py  visual_sim.py
program_refactoring/domains/python/: create_splits.py  generate_collection.py  utils.py
program_refactoring/domains/textcraft/: generate_collection.py  utils.py
program_refactoring/model/: hf_model.py  import os.py  lemur_prompts.py  llama_prompts.py  model.py  openai_model.py  prompts.py  qwen_prompts.py
program_refactoring/tree/: big_tree.py  logo_tuple.py  logo_tuple_old.py  node.py  python_tuple.py  textcraft_tuple.py  tuple.py
scripts/codecontests/: label_detailed_solutions.py  postprocess_metrics.py
scripts/codecontests/minicluster/: preprocess_LLM_desc_clusters.sh  train_librarian.sh  train_single.sh
