[project]
name = "regal-program-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "LibLearn Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "altair>=5.5.0",
    "aquarel>=0.0.7",
    "async-timeout",
    "backoff",
    "chromadb>=1.0.4",
    "datasets>=2.14.7",
    "ipdb>=0.13.13",
    "jsonlines",
    "jsons",
    "matplotlib",
    "networkx",
    "num2words",
    "numpy",
    "openai",
    "overrides",
    "pandas",
    "protobuf",
    "py-spy",
    "pydantic",
    "pyparsing",
    "radon",
    "requests",
    "ruff>=0.11.4",
    "safetensors",
    "scikit-learn",
    "scipy",
    "sentencepiece",
    "sexpdata",
    "sympy",
    "tenacity",
    "tiktoken",
    "timeout-decorator",
    "together",
    "tokenizers",
    "tqdm",
    "vl-convert-python>=1.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["program_refactoring"]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "d7cb5e138ec1ccc848a554574b1a89f0dfaf0e90" }
